# cpitd

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
cpitd/: __init__.py  cache.py  cli.py  config.py  discovery.py  filter.py  indexer.py  pipeline.py  reporter.py  tokenizer.py  types.py  winnowing.py
docs/: api.rst  conf.py  index.rst
examples/: github-actions.yml
tests/: test_cache.py  test_cli.py  test_config.py  test_discovery.py  test_filter.py  test_indexer.py  test_pipeline.py  test_reporter.py  test_tokenizer.py  test_winnowing.py
tests/fixtures/: abc_a.py  abc_b.py  clone_a.py  clone_b.py  unique.py
